# Varasi

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  SPRINTS.md  docker-compose.yml
.github/workflows/: ci.yml
control-plane/: Dockerfile  go.mod  go.sum
control-plane/cmd/server/: main.go
control-plane/internal/auth/: auth.go
control-plane/internal/config/: config.go
control-plane/internal/db/: db.go
control-plane/internal/httpapi/: alert_engine.go  alert_handlers.go  analytics_handlers.go  auth_handlers.go  catalog_proxy.go  detection_handlers.go  ingest_handlers.go  job_handlers.go  metrics.go  middleware.go  notifiers.go  openapi.go  org_handlers.go  respond.go  router.go  server.go  watch_handlers.go
deploy/: README.md  prometheus.yml
scripts/: init_minio.sh  wait_healthy.sh
services/ai-worker/: Dockerfile  README.md  pyproject.toml
services/ai-worker/varasi_ai/: __init__.py  classify.py  config.py  detect.py  main.py  reader.py  schemas.py  vectorize.py
services/ai-worker/varasi_ai/algorithms/: __init__.py  base.py  dl.py  image_diff.py  spectral.py
services/ingest-worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/ingest-worker/varasi_ingest/: __init__.py  cli.py  collections.py  config.py  pipeline.py  profile.py  samples.py  server.py  stac_client.py  thumbnails.py
services/ingest-worker/varasi_ingest/providers/: __init__.py  base.py  filesystem.py  http.py  s3.py
web/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
web/public/: .gitkeep
web/src/app/: globals.css  (+2 more)
(+31 files in other folders)
