[project]
name = "varasi-ai"
version = "0.1.0"
description = "Varasi change-detection inference service: pluggable algorithms over COG pairs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "rasterio>=1.3",
    "rio-tiler>=6.4",
    "numpy>=1.26",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["varasi_ai*"]
